DBZ-9462 Deploy kafka container with correct ports